Replace Page<> with Slice<> for pagination operations
According to: https://www.youtube.com/watch?v=wi6h9ox1wwM