@@ -5,46 +5,45 @@ import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Class for testing purposes to catch logs.
  */
 public class MemoryAppender extends ListAppender<ILoggingEvent> {
     public void reset() {
-        this.list.clear();
+        list.clear();
     }
 
     public boolean contains(String string, Level level) {
-        return this.list.stream()
+        return list.stream()
                 .anyMatch(event -> event.getMessage().toString().contains(string)
                         && event.getLevel().equals(level));
     }
 
     public int countEventsForLogger(String loggerName) {
-        return (int) this.list.stream()
+        return (int) list.stream()
                 .filter(event -> event.getLoggerName().contains(loggerName))
                 .count();
     }
 
     public List<ILoggingEvent> search(String string) {
-        return this.list.stream()
+        return list.stream()
                 .filter(event -> event.getMessage().toString().contains(string))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ILoggingEvent> search(String string, Level level) {
-        return this.list.stream()
+        return list.stream()
                 .filter(event -> event.getMessage().toString().contains(string)
                         && event.getLevel().equals(level))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public int getSize() {
-        return this.list.size();
+        return list.size();
     }
 
     public List<ILoggingEvent> getLoggedEvents() {
-        return Collections.unmodifiableList(this.list);
+        return Collections.unmodifiableList(list);
     }
 }
